2005-02-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/siod-wrapper.c: reverted the last change
	since it changes the script API. Such a change must not be done in
	the stable branch.

2005-02-16  Kevin Cozens  <kcozens@cvs.gimp.org>

	* plug-ins/script-fu/siod-wrapper.c: Added constants MIN-IMAGE-SIZE,
	MAX-IMAGE-SIZE, MIN-RESOLUTION, and MAX-RESOLUTION for use in Script-Fu
	scripts. See comment #4 in bug #167529.

2005-02-16  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/plug-ins/script-fu/scripts/guides-new.scm:  committted
	slightly modified patch from  Joao S. O. Bueno Calligaris
	to raise guide position limit to 262144.

2005-02-16  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged from HEAD:

	* app/tools/gimpclonetool.[ch]: make sure clone source is
	shown in correct display, fixes bug #167002.

2005-02-12  Sven Neumann  <sven@gimp.org>

	Merged from HEAD:

	* app/dialogs/file-open-dialog.c
	* app/dialogs/file-open-location-dialog.c
	* app/dialogs/file-save-dialog.c
	* app/widgets/gimpselectiondata.c
	* app/widgets/gimpthumbbox.c
	* libgimpthumb/gimpthumb-utils.c
	* libgimpthumb/gimpthumb-utils.h
	* libgimpthumb/gimpthumbnail.c
	* plug-ins/help/domain.c
	* plug-ins/helpbrowser/dialog.c: use file_utils_filename_from_uri()
	or similar code to deal better with UNC paths.

2005-02-09  Manish Singh  <yosh@gimp.org>

	* gimptext-xlfd.c (launder_font_name): simplify a bit.

2005-02-08  Manish Singh  <yosh@gimp.org>

	* app/text/gimpfont-utils.[ch]: new function to workaround pango
	bug #166540, by tacking on a ',' to font names that end in numbers,
	so pango_font_description_from_string doesn't interpret it as a size.

	* app/text/Makefile.am: add above files.

	* app/text/gimpfontlist.c
	* app/text/gimptext-compat.c: use new function.

	* app/text/gimptext-xlfd.c: also make sure font names pulled out
	from XLFD don't end in numbers.

	* app/text/gimpfont.c
	* app/text/gimptextlayout.c: remove some redundant checks.
