@@ -1,5 +1,14 @@
 2005-02-17  Sven Neumann  <sven@gimp.org>
 
+	Merged from HEAD:
+
+	* app/widgets/gimpviewrenderergradient.c
+	(gimp_view_renderer_gradient_render): don't attempt to read beyond
+	the pre-calculated render buffers, even if the gradient somehow
+	has out-of-bounds values. Fixes the crash reported in bug #167604.
+
+2005-02-17  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/script-fu/siod-wrapper.c: reverted the last change
 	since it changes the script API. Such a change must not be done in
 	the stable branch.
